<!-- activity_riff9.xml
Primary Layout file for riff 9 activity
Created by: Alex Totheroh
Created on: 3/1/2015
Last Modified by: Alex Totheroh
Last Modified on: 3/6/2015
Assignment/Project: A290 Android Development Final Project
Part of: BluesGuitarRiffs, refers to Riff9Activity.java
-->

<!-- The layout for this activity is essentially identical to the layout for riff 1, 
which has more detailed comments.  See activity_riff1.xml for more detailed comments. 
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout 
    android:id="@+id/LinearLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/riff9title"
        android:textColor="#006AA8"
        android:textSize="40dp"
        android:textStyle="bold|italic" />
    
    <TextView
    	    android:id="@+id/textView1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:layout_marginTop="20dp"
    	    android:text="@string/subActivityHint"
    	    android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:src="@drawable/riff9tab" />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="76dp"
		android:layout_height="78dp"
        android:layout_gravity="center"
        android:background="@drawable/playbuttonsel"
        android:text="" />
    
    <com.google.android.gms.ads.AdView
        	android:id="@+id/adView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="20dp"
        	android:layout_gravity="center_horizontal"
        	ads:adSize="BANNER"
        	ads:adUnitId="@string/riff9banner">
    	</com.google.android.gms.ads.AdView>

    <Button
        android:id="@+id/backbutton"
        android:layout_width="66dp"
		android:layout_height="62dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/backbuttonsel"
        android:text="" />

</LinearLayout>

</ScrollView>
