
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainScrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">

		<!-- The title, underline, instructions, and buttons are all contained in a linear layout -->
		<LinearLayout
    		android:id="@+id/LinearLayout1"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:paddingBottom="@dimen/activity_vertical_margin"
    		android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin">

		    <TextView
			    android:id="@+id/mainActivityTitle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:layout_marginTop="1dp"
			    android:text="@string/appTitle"
			    android:textSize="32sp"
			    android:textStyle="bold"
			    android:textColor="#000000" />

			<ImageView
			    android:id="@+id/underlineImageView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:layout_marginBottom="15dp"
			    android:src="@drawable/underline" />

    		<TextView
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	   	 	android:layout_gravity="center_horizontal"
    	    	android:text="@string/HomeTitle"
    	    	android:textSize="14sp" />

            <Button
                android:id="@+id/ratebeg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textSize="9dp"
                android:background="@color/wallet_holo_blue_light"
                android:text="I&apos;m a one-man operation.  Help me out by rating this app! (tap here)"
                android:visibility="visible"
                android:elevation="10dp"/>

            <!-- The following 4 containers lay out the credits at the bottom of the home page -->
            <TextView
                android:id="@+id/horizontalRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="___________________________________" />

            <TextView
                android:id="@+id/creditsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="10.5sp"
                android:text="@string/credits" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:text="@string/email" />

            <TextView
                android:id="@+id/horizontalRule2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-7dp"
                android:layout_marginBottom="40dp"
                android:text="___________________________________" />

			<android.support.v4.view.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/viewPager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:context="edu.indiana.bluesguitarriffs.MainActivity"/>

		</LinearLayout>

</ScrollView>
